# ezlib

./: .gitignore  CLAUDE.md  turbo.json
services/crawler/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
services/crawler/.bmad-core/: install-manifest.yaml
services/crawler/.serena/: project.yml
services/crawler/.serena/memories/: codebase_structure.md  coding_standards.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md  testing_patterns.md
services/crawler/docs/: architecture.md  data-contracts.md  external-apis.md  prd.md  workflows.md
services/crawler/docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
services/crawler/docs/architecture_shards/: api-specification.md  data-models.md  data-processing-pipeline.md  deployment-configuration.md  error-handling-and-monitoring.md  external-api-integration.md  future-considerations.md  index.md  overview.md  security-considerations.md  technical-architecture.md
services/crawler/docs/prd/: constraints-and-assumptions.md  future-enhancements.md  goals-and-background-context.md  index.md  requirements.md  success-metrics.md  technical-integration-points.md  user-stories-and-acceptance-criteria.md
services/crawler/docs/stories/: 1.1.project-setup-basic-fastapi.md  1.2.openlibrary-api-integration.md  (+3 more)
services/crawler/scripts/: format-code.sh  run-tests.sh  setup-dev.sh
services/crawler/src/: __init__.py  main.py
services/crawler/tests/: __init__.py  conftest.py  test_main.py
(+465 files in other folders)
